<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/custonm_button"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn1"
        android:text="@string/hetromyopia"
        android:layout_margin="10dp"
        android:background="@drawable/btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn2"
        android:text="@string/myopia"
        android:layout_margin="10dp"
        android:background="@drawable/btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn3"
        android:text="@string/colourbindness"
        android:layout_margin="10dp"
        android:background="@drawable/btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn4"
        android:textSize="12sp"
        android:text="@string/colorrecognization"
        android:layout_margin="10dp"
        android:background="@drawable/btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn5"
        android:text="@string/feedback"
        android:layout_margin="10dp"
        android:background="@drawable/btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"/>
</LinearLayout>